force-app/main/default/objects/Location__c/fields/Avg_Intake_Time__c.field-meta.xml
<CustomField>
    <fullName>Avg_Intake_Time__c</fullName>
    <label>Avg. Intake Time (days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>