force-app/main/default/objects/Location__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>