force-app/main/default/objects/Location__c/fields/Directory_Only_Location__c.field-meta.xml
<CustomField>
    <fullName>Directory_Only_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory Only Location</label>
    <type>Checkbox</type>
</CustomField>