force-app/main/default/objects/Location__c/fields/Directory_Print_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Directory_Print_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory Print Indicator</label>
    <type>Checkbox</type>
</CustomField>