force-app/main/default/objects/Location__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Chinese, Mandarin</fullName>
            </value>
            <value>
                <fullName>2. Chinese, Southern</fullName>
            </value>
            <value>
                <fullName>3. Spanish</fullName>
            </value>
            <value>
                <fullName>4. Arabic</fullName>
            </value>
            <value>
                <fullName>5. Bengali</fullName>
            </value>
            <value>
                <fullName>6. Hindi</fullName>
            </value>
            <value>
                <fullName>7. Russian</fullName>
            </value>
            <value>
                <fullName>8. Portuguese</fullName>
            </value>
            <value>
                <fullName>9. Japanese</fullName>
            </value>
            <value>
                <fullName>10. German</fullName>
            </value>
            <value>
                <fullName>11. Chinese, Wu</fullName>
            </value>
            <value>
                <fullName>12. Javanese</fullName>
            </value>
            <value>
                <fullName>13. Korean</fullName>
            </value>
            <value>
                <fullName>14. French</fullName>
            </value>
            <value>
                <fullName>15. Turkish</fullName>
            </value>
            <value>
                <fullName>16. Vietnamese</fullName>
            </value>
            <value>
                <fullName>17. Telugu</fullName>
            </value>
            <value>
                <fullName>18. Chinese, Yue(Cantonese)</fullName>
            </value>
            <value>
                <fullName>19. Marathi</fullName>
            </value>
            <value>
                <fullName>20. Tamil</fullName>
            </value>
            <value>
                <fullName>21. Italian</fullName>
            </value>
            <value>
                <fullName>22. Urdu</fullName>
            </value>
            <value>
                <fullName>23. Chinese, Min Nan</fullName>
            </value>
            <value>
                <fullName>24. Chinese, Jinyu</fullName>
            </value>
            <value>
                <fullName>25. Gujarati</fullName>
            </value>
            <value>
                <fullName>26. Polish</fullName>
            </value>
            <value>
                <fullName>27. Ukrainian</fullName>
            </value>
            <value>
                <fullName>28. Persian</fullName>
            </value>
            <value>
                <fullName>29. Chinese, Xiang</fullName>
            </value>
            <value>
                <fullName>30. Malayalam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>