force-app/main/default/objects/Location__c/fields/Languages_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Languages_Spoken__c</fullName>
    <label>Languages Spoken</label>
    <type>TextArea</type>
</CustomField>