force-app/main/default/objects/Location__c/fields/Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Status__c</fullName>
    <label>Location Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>