force-app/main/default/objects/Location__c/fields/Occupancy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Rate__c</fullName>
    <label>Occupancy Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>