force-app/main/default/objects/Location__c/fields/Office_Hours__c.field-meta.xml
<CustomField>
    <fullName>Office_Hours__c</fullName>
    <label>Office Hours</label>
    <length>40</length>
    <type>Text</type>
</CustomField>