force-app/main/default/objects/Location__c/fields/Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Score__c</fullName>
    <label>Satisfaction Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>