force-app/main/default/objects/Location__c/recordTypes/HCSC_Facilities_Location.recordType-meta.xml
<RecordType>
    <fullName>HCSC_Facilities_Location</fullName>
    <active>true</active>
    <label>HCSC Facilities Location</label>
</RecordType>