force-app/main/default/objects/Location__c/recordTypes/HCSC_Location.recordType-meta.xml
<RecordType>
    <fullName>HCSC_Location</fullName>
    <active>true</active>
    <label>HCSC Individual Location</label>
</RecordType>