force-app/main/default/objects/Location__c/recordTypes/HCSC_Medical_Group_Location.recordType-meta.xml
<RecordType>
    <fullName>HCSC_Medical_Group_Location</fullName>
    <active>true</active>
    <label>HCSC Medical Group Location</label>
</RecordType>